# opengl-demo

./: .gitmodules  CMakeLists.txt  readme.txt
shaders/demo01/: StandardShading.fragmentshader  StandardShadingGouraud.fragmentshader  StandardShadingGouraud.vertexshader
shaders/demo02/: NormalMapped.vertexshader
src/: demo.h  demo00.cpp  demo00.h  demo01.cpp  demo01.h  globjs.cpp  globjs.h  main.cpp  objloader.cpp  objloader.h  shader.cpp  shader.h  sphere.cpp  sphere.h  texture.cpp  texture.h
src/demo00/: demo00.cpp  demo00.h
src/demo01/: demo01.cpp  demo01.h
src/demo02/: demo02.cpp  demo02.h
